--- a/CH01.md
+++ b/CH01.md
@@ -12,7 +12,7 @@ https://colab.research.google.com
    Colab筆記本是存在Google Drive裡面，對於管理和做練習資料夾都方便，在轉換不同環境時也可以無痛轉換。
 
 # 操作步驟
-打開colab，鍵入print ("hello world")並執行
+打開colab，鍵入 $\color{red}{\text{print ("hello world")}}$ 並執行
 修改檔案名稱並進到雲端硬碟確認是否有同步到雲端硬碟
 
 <img width="843" height="188" alt="image" src="https://github.com/user-attachments/assets/d31f099d-eac2-43f6-971d-06ec344a3540" />
@@ -109,7 +109,7 @@ score=60
 print("小明的成績為"+str(score))
 ```
 # 輸入語法
-input()：$\color{red}{\text{使用者輸入進來的全部都屬於字串類型}}$ </br>
+input()： $\color{red}{\text{使用者輸入進來的全部都屬於字串類型}}$ </br>
 ```
 age=input("請輸入age:  ")
 b="I'm " + age + " years old"
