--- a/CH01.md
+++ b/CH01.md
@@ -123,3 +123,38 @@ b="I'm " + age + " years old"
 print(b)
 ```
 
+#  $\color{red}{\text{作業}}$
+請讓使用者輸入"姓名"、"國文"、"英文"、"數學"、"總分"、"平均"
+印出姓名、三科分數、總分與平均
+<img width="400" height="250" alt="image" src="https://github.com/user-attachments/assets/8b69b431-b5a9-4aa8-8a19-248d370b2394" />
+
+# 參數格式化
+print()支援參數格式化功能 %s代表字串、%d代表整數、%f代表浮點數
+```
+name="林小明"
+socre=80
+print("%s的分數為%d" %(name,socre))
+```
+# 控制列印位置
+%5d：列印5個字元，少於5的會在數字左方填入空白，大於則會全部列印</br>
+%5s：列印5個字元，少於5的會在字串左方填入空白，大於則會全部列印</br>
+%8.2f：固定列印8個字元(含小數點)，小數固定列印2位數，</br>
+小數少於2位數會填入0字元</br>
+```
+price=23.8
+print("價格為%8.2f" %price) #印出 ___23.80 (底線為三個空白字元)
+```
+# 運算符號
+## 算術運算子
+<img width="600" height="300" alt="image" src="https://github.com/user-attachments/assets/7e27dc4e-979d-471b-8b05-86d458dc80a2" />
+
+## 比較運算子
+<img width="600" height="300" alt="image" src="https://github.com/user-attachments/assets/bb86afb7-a330-4d12-9324-f1e6d31a5594" />
+
+## 邏輯運算子
+<img width="600" height="200" alt="image" src="https://github.com/user-attachments/assets/32c4ddc8-c2db-4860-9810-ded5938cc69d" />
+
+## 複合運算子
+<img width="600" height="300" alt="image" src="https://github.com/user-attachments/assets/38840316-2914-418e-9f23-2f2016bae62c" />
+
+
