--- a/ch02.md
+++ b/ch02.md
@@ -1,6 +1,61 @@
-# 判斷式
-<img width="500" height="450" alt="image" src="https://github.com/user-attachments/assets/b9aac0f1-932c-4610-96f1-6e0319155d09" />
+第二章程式碼：[![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/ytlLab/PYTHON/blob/main/ch02.ipynb)
 
-單向判斷式：注意縮排和冒號(:)
+# 判斷式
+<img width="350" height="300" alt="image" src="https://github.com/user-attachments/assets/b9aac0f1-932c-4610-96f1-6e0319155d09" />
+
+## 單向判斷式：注意縮排和冒號(:)
   - if判斷式最後必須加上冒號
   - 被執行的程式必須縮一排(tab)
+<img width="350" height="60" alt="image" src="https://github.com/user-attachments/assets/8d16efb7-ec23-495d-93b5-f760cc00867f" />
+
+```
+#練習：輸入X和Y兩個數字，判斷X是否可以被Y整除
+#if判斷式練習
+#輸入X和Y兩個數字，判斷X是否可以被Y整除
+y=input("請輸入數字:")
+n=input("請輸入除數:")
+y=int(y) #轉換成整數型態
+n=int(n)
+if y%n==0:
+  print(str(y)+"可以被"+str(n)+"整除")
+```
+## 多向判斷式(if…else)
+<img width="350" height="140" alt="image" src="https://github.com/user-attachments/assets/35d9c8ca-51d1-4816-af39-00bd2aefaa95" />
+
+```
+#練習：輸入一數字，判斷該數字大小區間回傳
+#多向式判斷
+z=input("請輸入數字")
+z=int(z) #轉換為整數型態
+if z>=200:
+  print("大於200")
+elif z>=100:
+  print("大於100,小於200")
+else:
+  print("小於100")
+```
+
+```
+#練習：四則運算計算機
+#多向式判斷-四則運算計算機
+n1=int(input("請輸入數字1:"))
+n2=int(input("請輸入數字2:"))
+op=input("請輸入運算:+,-,*,/")
+if op=="+":
+  print(n1+n2)
+elif op=="-":
+  print(n1-n2)
+elif op=="*":
+  print(n1*n2)
+elif op=="/":
+  print(n1/n2)
+else:
+  print("輸入錯誤")
+```
+
+## 作業：
+購物問題：輸入購買衣褲數量，
+衣服單價一件1000，褲子單價一件1000，若買一套打九五折。
+總金額大於一萬再打八折，大於五千打九折。
+<img width="825" height="78" alt="image" src="https://github.com/user-attachments/assets/c87c4e85-28ca-4e98-8a3f-e3f9169d50b0" />
+
