--- a/ch03.md
+++ b/ch03.md
@@ -1,1 +1,289 @@
-something writing
+第三章程式碼：[![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/ytlLab/PYTHON/blob/main/ch03.ipynb)
+
+# 迴圈
+
+## while迴圈
+<img width="350" height="70" alt="image" src="https://github.com/user-attachments/assets/5ca914e2-69c3-4741-9d40-711a89d9d770" />
+
+```
+#練習
+#用while迴圈，印出所有小於五的數字
+n=1
+while n<5:
+  print(n)
+  n=n+1
+```
+## for迴圈
+<img width="350" height="70" alt="image" src="https://github.com/user-attachments/assets/aca99d77-edc8-4380-86af-b72a752f5531" />
+
+[range 用法與範例](https://shengyu7697.github.io/python-range/)
+```
+#練習
+for k2 in [3,4,5]:
+  print(k2) #印出k2每一個資料
+for k3 in "hello":
+  print(k3)
+for k4 in range(5): #range(5)相對於一個0.1.2.3.4的列表
+  print(k4)
+```
+```
+#練習
+#利用迴圈加總1到100
+sum=0
+for x in range(1,101): #計算一加到100
+  sum=sum+x
+print(sum)
+```
+```
+#練習
+#while+if綜合練習
+#輸入數字，印出所有因數
+x1=int(input("請輸入數字:"))
+x2=1
+while x1>=x2:
+  if x1%x2==0:
+    print(x2)
+  x2=x2+1
+```
+## 巢狀for迴圈
+```
+#九九乘法表
+for i in range(1,10):
+	for j in range(1,10):
+    	product = i * j
+    	print("%d*%d=%-2d   " % (i, j, product), end="")
+	print()
+```
+1. 1-2	內外兩層個執行9次的for迴圈
+2. 4	列印乘法算式：格式「-2d」表示列印佔兩個字元的整數，並靠左對齊「end=""」表示不換行，在同一列列印
+3. 5  內層迴圈執行完換行
+
+## 作業
+請將上述程式改寫成以下排列方式
+<img width="750" height="200" alt="image" src="https://github.com/user-attachments/assets/40d4d542-358f-470f-9a05-cb56e2d055b9" />
+
+## break、continue、pass
+break：強制跳出 ❮整個❯ 迴圈</br>
+continue：強制跳出 ❮本次❯ 迴圈，繼續進入下一圈</br>
+pass：不做任何事情，所有的程式都將繼續</br>
+[1 分鐘搞懂 Python 迴圈控制：break、continue、pass](https://medium.com/@chiayinchen/1-%E5%88%86%E9%90%98%E6%90%9E%E6%87%82-python-%E8%BF%B4%E5%9C%88%E6%8E%A7%E5%88%B6-break-continue-pass-be290cd1f9d8)
+
+```
+#練習
+n = int(input("請輸入大樓的樓層數："))
+print("本大樓具有的樓層為：")
+if(n > 3):
+	n += 1
+for i in range(1, n+1):
+	if(i==4):
+    		continue
+	print(i, end=" ")
+print()
+```
+for...else迴圈，通常會跟if及break命令配合使用
+```
+語法：
+for 變數 in 串列:
+	程式區塊一
+	if(條件式):
+		程式區塊二
+		break
+else:
+	程式區塊三
+```
+```
+#練習
+n = int(input("請輸入大於 1 的整數："))
+if(n == 2):
+	print("2 是質數！")
+else:
+  for i in range(2, n):
+    if(n % i == 0):
+      print("%d 不是質數！" % n)
+      break
+  else:
+    print("%d 是質數！" % n)
+```
+# 串列
+大量資料需要儲存時，就必須宣告大量變數。</br>
+串列又稱為清單或是列表，與其他語言的陣列(array)相同</br>
+[Python串列(list) 基礎與23個常用操作](https://selflearningsuccess.com/python-list/)
+Python串列（list）以 [ ] 中括號來表示，</br>
+
+例如 [‘a’, ‘b’, ‘c’] 就是一個簡單的串列，</br>
+它的項目包括三個字串 ‘a’, ‘b’, ‘c’，並以逗號隔開，</br>
+位置（index） 分別是 0、1、2。</br>
+
+## 串列特性包括：
+- 可以儲存多個資料
+- 就像建立一個資料清單，可以放入很多資料，相同的資料可以重複出現。
+- 屬於序列結構
+- 序列，指的是串列內的值有順序性，所以可以使用各種有關順序的方法 （Method） 進行操作；結構，指的是資料結構（data structure）是電腦中儲存、組織資料的方式。
+- 值是可變的 （mutable）
+- 可以刪除、增加、修改串列的值，可以更動串列內的各個項目。
+
+## 建立串列
+串列是將一連串的元素放在一個序列中，使其都有各自的編號，放入的元素可以是字串、數字、布林、串列、字典...等基本元素，</br>
+在 Python 裡，有三種方法可以建立串列：
+- 「中括號 ( 方括號 )」
+- 「list()」
+- 「split() + 字串」
+
+### 中括號 ( 方括號 )
+將要建立為串列的元素，放入中括號裡，並使用逗號分隔，就會成為一個串列，通常會將串列賦值給一個變數，</br>
+下方的例子 a 是字串的串列，b 是數字串列，c 則是文字、數字和串列所組成的串列。
+
+```
+#練習
+a = ['apple','banana','orange']
+b = [1,2,3,4,5]
+c = ['apple',1,2,3,['dog','cat']]
+print(type(a))   # <class 'list'>
+print(type(b))   # <class 'list'>
+print(type(c))   # <class 'list'>
+```
+
+### list()
+list() 函式可以建立一個「空的」串列，也能將「可迭代」( 有順序 ) 的資料轉換成串列，</br>
+例如 tuple、字串、集合或字典，</br>
+下方的例子 b 會將 tuple 轉換成串列，c 是空的串列，d 則是將 apple 字串變成五個獨立字母的串列。
+
+```
+#練習
+a = ('apple','banana','orange')
+b = list(a)
+c = list()
+d = list('apple')
+print(b)   # ['apple', 'banana', 'orange']
+print(c)   # []
+print(d)   # ['a', 'p', 'p', 'l', 'e']
+```
+### split() + 字串
+split() 函式可以將一個字串，根據指定的分隔符號，拆分成串列，</br>
+下圖的例子，會根據「.」符號，將字串拆成串列，由於有多個「.」在一起，拆分時會出現「空」的字串元素。
+```
+#練習
+a = 'apple...banana...orange'
+b = a.split('.')
+print(b)   # ['apple', '', '', 'banana', '', '', 'orange']
+```
+
+## 合併串列
+合併串列有兩種方法：「使用 + 號」和「extend()」
+### 使用 + 號
+  使用「+」號可以讓兩個串列，像字串一樣的相加，在 + 號右方的串列，會加在左方串列的後方。
+```
+#練習
+#使用 + 號
+a = ['a1','a2','a3']
+b = ['b1','b2','b3']
+c = a + b
+print(c)   # ['a1', 'a2', 'a3', 'b1', 'b2', 'b3']
+```
+### extend()
+  extend() 函式能讓一個串列的後方，合併另外一個串列的內容。
+```
+#練習
+#extend()
+a = ['a1','a2','a3']
+b = ['b1','b2','b3']
+a.extend(b)
+print(a)   # ['a1', 'a2', 'a3', 'b1', 'b2', 'b3']
+```
+## 讀取串列項目
+要使用串列，就必須要讀取串列的內容。</br>序列中每個元素都有各自的序列編號 ( offset )，只要透過「[offset]」，就能讀取對應的內容，串列中第一個項目的 offset 為 0，第二個 offset 為 1，依此類推，</br>
+下面的例子，會依序讀取並印出串列中的元素。
+```
+#練習
+a = ['apple','banana','orange']
+print(a[0])   # apple
+print(a[1])   # banana
+print(a[2])   # orange
+```
+如果串列中有串列，就構成了「多維串列」，讀取元素時如果有第二層，就多一個中括號加上 offset，就能讀取第二層的元素
+```
+#練習
+a = ['apple','banana','orange',['dog','cat']]
+print(a[3][0])   # dog
+print(a[3][1])   # cat
+```
+## 添加串列項目
+Python 提供兩種串列添加項目的方法：「append()」和「insert()」</br>
+append() 函式</br>
+將項目添加在一個串列的尾端，如果添加的是一個序列 tuple，會原封不動的變成一個新元素 ( 只佔有一個 offset，變成第二層序列或 tuple )。</br>
+insert()</br>
+如果已經知道要添加的位置 offset，使用 insert() 函式，就可以將指定的內容，從指定的位置加入，如果插入的位置設定為 0，會將內容插入在串列的開頭，如果設定的位置大於串列長度，就會插入在尾端 ( 如果設定 -1，會插入在倒數第二個 )。</br>
+```
+#練習
+a = ['a','b','c','d','e']
+a.append(100)
+b = ['a','b','c','d','e']
+b.append([100,200,300])
+print(a)   # ['a', 'b', 'c', 'd', 'e', 100]
+print(b)   # ['a', 'b', 'c', 'd', 'e', [100, 200, 300]]
+```
+```
+#練習
+a = ['a','b','c','d','e']
+a.insert(3,100)
+b = ['a','b','c','d','e']
+b.insert(0,100)
+c = ['a','b','c','d','e']
+c.insert(100,100)
+d = ['a','b','c','d','e']
+d.insert(-1,100)
+print(a)   # ['a', 'b', 'c', 100, 'd', 'e']
+print(b)   # [100, 'a', 'b', 'c', 'd', 'e']
+print(c)   # ['a', 'b', 'c', 'd', 'e', 100]
+print(d)   # ['a', 'b', 'c', 'd', 100, 'e']
+```
+## 刪除串列項目
+Python 提供了四種方法，來刪除串列的資料：「del」、「remove()」、「pop()」和「clear()」。
+
+### del
+如果已經知道欲刪除項目的「位置 offset」，就能夠使用「del list(offset)」來刪除指定的項目，項目支援中括號的語法 ( 參考上方 slice() 的做法 )，可以刪除某個範圍的項目，當項目被刪除時，後方的項目會往前遞補，取代原本的位置。
+```
+#練習
+a = [0,1,2,3,4,5,6,7,8,9]
+del a[2]
+b = [0,1,2,3,4,5,6,7,8,9]
+del b[2:6]
+print(a)   # [0, 1, 3, 4, 5, 6, 7, 8, 9]
+print(b)   # [0, 1, 6, 7, 8, 9]
+```
+
+### remove()
+如果不知道欲刪除項目的「位置 offset」，可以使用 remove(項目內容) 刪除該項目，如果有多個同樣內容的項目，remove() 只會刪除第一個找到的項目。
+```
+#練習
+a = ['apple','apple','banana','orange']
+a.remove('apple')
+print(a)   # ['apple', 'banana', 'orange']
+```
+
+### pop()
+pop() 函式可以「取出並移除」串列裡的「一個項目」，使用的方式為「pop(offset)」，如果不指定數值或數值為 -1，則會取出最後一個項目，取出的項目如果沒有賦值給變數，這些項目就會消失。
+```
+#練習
+a = [0,1,2,3,4,5]
+b = a.pop(2)
+print(a)   # [0, 1, 3, 4, 5]
+print(b)   # 2
+```
+
+### clear()
+clear() 函式會清空整個串列的內容，使其變成一個空的串列。
+```
+#練習
+a = [0,1,2,3,4,5]
+a.clear()
+print(a)   # []
+```
+
+## 作業
+使用迴圈及串列的split和pop功能：
+將輸入資料(用空格做區隔)依序放入串列list中，然後再將資料倒序輸出。
+提示：list長度可用len(list)得知
+輸入：apple banana cat dog 
+輸出：dog cat banana apple
+
