--- a/ch01.md
+++ b/ch01.md
@@ -1,4 +1,8 @@
-第一章程式碼：[![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/ytlLab/PYTHON/blob/main/ch01.ipynb)
+第一章程式碼：
+<a href="https://colab.research.google.com/github/ytlLab/PYTHON/blob/main/ch03.ipynb" target="_blank">
+  <img src="https://colab.research.google.com/assets/colab-badge.svg" alt="Open In Colab">
+</a>
+
 # 基本語法
 # 概述
 Python從發明至今的近三十年，市面上有好幾種Python開發環境軟體，像是PyCharm CE、Spyder、Visual Studio Code等等，每一種IDE都有優缺點。</br>
