--- a/ch04.md
+++ b/ch04.md
@@ -174,8 +174,15 @@ print(movie['director'])
 ## 建立字典
 字典裡元素的"值"(value)可以是任何的資料型態，例如: 字串、整數、list、物件等等。但 key 必須是唯一且不可變的，也就是在寫程式時不可隨意更動，如整數、字串、tuple 等。
 Python 創建字典的方式有兩種:
-- 使用大刮號 {}					dict_1 = {} #使用大刮號{}創建字典
-- 使用內建函數 dict()			dict_2 = dict()
+- 使用大刮號 {}
+```
+dict_1 = {}
+#使用大刮號{}創建字典
+```
+- 使用內建函數 dict()
+```
+dict_2 = dict()
+```
 也可以在建立字典的時候，便直接初始化字典的內容。
 
 舉三部電影來當例子：
@@ -370,9 +377,9 @@ dict1 is dict2
 ```
 9. 產生或列印字典中的鍵值對
 ```
-for key in dict:
+for key in movie_1:
 	print(key)
-for key, value in dict.items():
+for key, value in movie_1.items():
 	print(key, value)
 #以 movie_1 的例子來說，如果以我們平常使用迴圈的方式想要列印出字典中的內容的話，印出來的會是movie_1裡面的鍵值 (key)。
 ```
