--- a/ch04.md
+++ b/ch04.md
@@ -1,6 +1,6 @@
 # 字典
 第四章程式碼：
-<a href="https://colab.research.google.com/github/ytlLab/PYTHON/blob/main/ch0４.ipynb" target="_blank">
+<a href="https://colab.research.google.com/github/ytlLab/PYTHON/blob/main/ch04.ipynb" target="_blank">
   <img src="https://colab.research.google.com/assets/colab-badge.svg" alt="Open In Colab">
 </a>
 
