--- a/ch05.md
+++ b/ch05.md
@@ -279,3 +279,361 @@ B: 5,10,15,⋯,100
 
 將上述轉為集合，求出交集、聯集、A-B差集、B-A差集、對稱差集
 
+## 適用集合的方法
+<img width="600" height="400" alt="image" src="https://github.com/user-attachments/assets/b9b27142-fb08-43bb-9460-74f64d9cb73b" />
+### add( )
+add( )可以增加一個元素，它的語法格式如下：
+
+集合A.add(新增元素)
+```
+#練習
+
+cities = { 'Taipei', 'Beijing', 'Tokyo'}
+# 增加一般元素
+cities.add('Chicago')
+print('cities集合內容 ', cities)
+# 增加已有元素並觀察執行結果
+cities.add('Beijing')
+print('cities集合內容 ', cities)
+# 增加元組元素並觀察執行結果
+tup = (1, 2, 3)
+cities.add(tup)
+print('cities集合內容 ', cities)
+```
+
+### copy( )
+新集合名稱 = 舊集合名稱.copy( )
+```
+#練習
+
+# 賦值
+numset = {1, 2, 3}
+deep_numset = numset
+deep_numset.add(10)
+print("賦值   - 觀察numset    	", numset)
+print("賦值   - 觀察deep_numset   ", deep_numset)
+# 淺拷貝shallow copy
+shallow_numset = numset.copy( )
+shallow_numset.add(100)
+print("淺拷貝 - 觀察numset    	", numset)
+print("淺拷貝 - 觀察shallow_numset", shallow_numset)
+```
+
+### remove( )
+
+集合A.remove(欲刪除的元素)
+
+```
+#練習 使用remove( )刪除集合元素成功
+
+countries = {'Japan', 'China', 'France'}
+print("刪除前的countries集合 ", countries)
+countries.remove('Japan')
+print("刪除後的countries集合 ", countries)
+```
+
+```
+#練習 使用remove( )刪除集合元素失敗
+
+animals = {'dog', 'cat', 'bird'}
+print("刪除前的animals集合 ", animals)
+animals.remove('fish')    	# 刪除不存在的元素產生錯誤
+print("刪除後的animals集合 ", animals)
+```
+
+### discard( )
+ret_value = 集合A.discard(欲刪除的元素)
+
+```
+#練習 使用discard( )刪除集合元素
+animals = {'dog', 'cat', 'bird'}
+print("刪除前的animals集合	", animals)
+# 欲刪除元素有在集合內
+animals.discard('cat')   	 
+print("刪除後的animals集合	", animals)
+# 欲刪除元素沒有在集合內
+animals.discard('pig')
+print("刪除後的animals集合	", animals)
+# 列印傳回值
+print("刪除資料存在的傳回值   ", animals.discard('dog'))
+print("刪除資料不存在的傳回值 ", animals.discard('pig'))
+```
+
+### pop( )
+ret_element = 集合A.pop( )
+
+```
+#練習 使用pop( )刪除集合元素
+
+animals = {'dog', 'cat', 'bird'}
+print("刪除前的animals集合 ", animals)
+ret_element = animals.pop( )   	 
+print("刪除後的animals集合 ", animals)
+print("所刪除的元素是  	", ret_element)
+```
+
+### clear( )
+clear( )可以刪除集合內的所有元素，傳回值是None
+
+```
+#練習
+
+states = {'Mississippi', 'Idoho', 'Florida'}
+print("刪除前的states集合	", states)
+states.clear( )
+print("刪除前的states集合	", states)
+
+# 測試刪除空集合
+empty_set = set( )
+print("刪除前的empty_set集合 ", empty_set)
+states.clear( )
+print("刪除前的empty_set集合 ", empty_set)
+```
+
+### isdisjoint( )
+如果2個集合沒有共同的元素會傳回True，否則傳回False。
+
+ret_boolean = 集合A.isdisjoint(集合B)
+
+```
+#練習 isdisjoint( )
+
+A = {'a', 'b', 'c'}
+B = {'c', 'd', 'e'}
+C = {'h', 'k', 'p'}
+# 測試A和B集合
+boolean = A.isdisjoint(B)   	# 有共同的元素'c'
+print("有共同的元素傳回值是   ", boolean)
+# 測試A和C集合
+boolean = A.isdisjoint(C)   	# 沒有共同的元素
+print("沒有共同的元素傳回值是 ", boolean)
+```
+
+### issubset( )
+這個方法可以測試一個函數是否是另一個函數的子集合，
+
+例如，A集合所有元素均可在B集合內發現，則A集合是B集合的子集合。
+
+```
+#練習issubset( )
+
+A = {'a', 'b', 'c'}
+B = {'a', 'b', 'c', 'd', 'e', 'f', 'g', 'k'}
+C = {'k', 'm', 'n'}
+# 測試A和B集合
+boolean = A.issubset(B)     	# 所有A的元素皆是B的元素
+print("A集合是B集合的子集合傳回值是 ", boolean)
+# 測試C和B集合
+boolean = C.issubset(B)     	# 有共同的元素k
+print("C集合是B集合的子集合傳回值是 ", boolean)
+```
+
+### intersection_update( )
+ret_value = A.intersection_update(*B)
+
+#不同於 intersection() 方法，因為 intersection() 方法是返回一个新的集合，
+
+而 intersection_update() 方法是在原始的集合上移除不重叠的元素。
+
+```
+#練習intersection_update( )
+
+A = {'a', 'b', 'c', 'd'}
+B = {'a', 'k', 'c'}
+C = {'c', 'f', 'w'}
+# A將是A和B的交集
+ret_value = A.intersection_update(B)
+print(ret_value)
+print("A集合 = ", A)
+print("B集合 = ", B)
+# A將是A, B和C的交集
+ret_value = A.intersection_update(B, C)
+print(ret_value)
+print("A集合 = ", A)
+print("B集合 = ", B)
+print("C集合 = ", C)
+```
+
+### update( )
+集合A.update(集合B)
+
+```
+#練習 update( )
+
+cars1 = {'Audi', 'Ford', 'Toyota'}
+cars2 = {'Nissan', 'Toyota'}
+print("執行update( )前列出cars1和cars2內容")
+print("cars1 = ", cars1)
+print("cars2 = ", cars2)
+cars1.update(cars2)
+print("執行update( )後列出cars1和cars2內容")
+print("cars1 = ", cars1)
+print("cars2 = ", cars2)
+```
+
+### symmetric_difference_update( )
+集合A.symmetric_difference_update(集合B)
+
+```
+#練習symmetric_difference_update( )
+
+cars1 = {'Audi', 'Ford', 'Toyota'}
+cars2 = {'Nissan', 'Toyota'}
+print("執行difference_update( )前列出cars1和cars2內容")
+print("cars1 = ", cars1)
+print("cars2 = ", cars2)
+cars1.difference_update(cars2)
+print("執行difference_update( )後列出cars1和cars2內容")
+print("cars1 = ", cars1)
+print("cars2 = ", cars2)
+```
+
+## 適用集合的基本函數操作
+<img width="600" height="300" alt="image" src="https://github.com/user-attachments/assets/b1e5db22-c496-4ddb-b611-7ec99bd7f6ba" />
+
+### 凍結集合frozenset
+set是可變集合，frozenset是不可變集合也可直譯為凍結集合，這是一個新的類別(class)，
+
+只要設定元素後，這個凍結集合就不能再更改了。如果將元組(tuple)想成不可變串列(immutable list)，
+
+凍結集合就是不可變集合(immutable set)。
+
+```
+#練習 凍結集合frozenset
+
+X = frozenset([1, 3, 5])
+Y = frozenset([5, 7, 9])
+print(X)
+print(Y)
+print("交集  = ", X & Y)
+print("聯集  = ", X | Y)
+A = X & Y
+print("交集A = ", A)
+A = X.intersection(Y)
+print("交集A = ", A)
+```
+
+### 集合生成式
+新集合 = { 運算式  for  運算式  in  可迭代項目 }
+
+```
+#練習 產生1,3, …, 99的集合
+
+A = {n for n in range(1,100,2)}
+print(type(A))
+print(A)
+```
+
+# 元組(tuple)
+Python提供另一種資料型態稱元組(tuple)，這種資料型態結構與串列完全相同，
+
+元組與串列最大的差異是，它的元素值與元素個數不可更動，有時又可稱不可改變的串列。
+
+## 元組的功能
+可以更安全的保護資料
+
+增加程式執行速度
+
+## 元組的定義
+name_tuple = (元素1, … , 元素n,)   # name_tuple是假設的元組名稱
+
+如果元組內的元素只有一個，在定義時需在元素右邊加上逗號(“,”)。
+
+name_tuple = (元素1,)   	    	# 只有一個元素的元組
+
+```
+#練習
+
+numbers1 = (1, 2, 3, 4, 5)  	# 定義元組元素是整數
+fruits = ('apple', 'orange')	# 定義元組元素是字串
+mixed = ('James', 50)       	# 定義元組元素是不同型態資料
+val_tuple = (10,)           	# 只有一個元素的元祖
+print(numbers1)
+print(fruits)
+print(mixed)
+print(val_tuple)
+# 列出元組資料型態
+print("元組mixed資料型態是: ",type(mixed))
+```
+
+```
+#練習 修改元組內容產生錯誤的實例
+
+fruits = ('apple', 'orange')    	# 定義元組元素是字串
+print(fruits[0])                	# 列印元組fruits[0]
+fruits[0] = 'watermelon'        	# 將元素內容改為watermelon
+print(fruits[0])                	# 列印元組fruits[0]
+```
+
+```
+#練習 全新定義方式修改元組元素
+
+fruits = ('apple', 'orange')    	# 定義元組元素是水果
+print("原始fruits元組元素")
+for fruit in fruits:
+	print(fruit)
+fruits = ('watermelon', 'grape')	# 定義新的元組元素
+print("\n新的fruits元組元素")
+for fruit in fruits:
+	print(fruit)
+```
+
+```
+#練習 元組切片的應用
+
+fruits = ('apple', 'orange', 'banana', 'watermelon', 'grape')
+print(fruits[1:3])
+print(fruits[:2])
+print(fruits[1:])
+print(fruits[-2:])
+print(fruits[0:5:2])
+```
+
+## 方法與函數
+```
+#練習 列出元組元素長度(個數)
+
+keys = ('magic', 'xaab', 9099)  	# 定義元組元素是字串與數字
+print("keys元組長度是 %d " % len(keys))
+```
+```
+#練習 用會減少元組元素的方法pop( )，產生錯誤
+
+keys = ('magic', 'xaab', 9099)  	# 定義元組元素是字串與數字
+key = keys.pop( )       	# 錯誤
+```
+```
+#練習 用會增加元組元素的方法append( )，產生錯誤
+
+keys = ('magic', 'xaab', 9099)  	# 定義元組元素是字串與數字
+keys.append('secret')       	# 錯誤
+```
+
+串列與元組資料互換
+
+```
+#練習 list(元組)：將元組資料型態改為串列
+
+keys = ('magic', 'xaab', 9099)  	# 定義元組元素是字串與數字
+list_keys = list(keys)          	# 將元組改為串列
+list_keys.append('secret')      	# 增加元素
+print("列印元組", keys)
+print("列印串列", list_keys)
+```
+
+```
+#練習 tuple(串列)：將串列資料型態改為元組
+
+keys = ['magic', 'xaab', 9099]  	# 定義串列元素是字串與數字
+tuple_keys = tuple(keys)        	# 將串列改為元組
+print("列印串列", keys)
+print("列印元組", tuple_keys)
+tuple_keys.append('secret')     	# 增加元素 --- 錯誤錯誤
+```
+## 作業
+定義一個元組有重複的元素 tp=(1,2,3,4,5,2,3,1,4)，
+
+請建立一個新的newtp，此新元組儲存相同但沒有重複的元素。
+
+提示：使用串列處理，最後轉成元組。
+
