--- a/ch05.ipynb
+++ b/ch05.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyN3Ju4tFEfKosT28SqEY3yJ",
+      "authorship_tag": "ABX9TyMDy9wEeF1OKMkfUwxxbdhs",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -430,6 +430,468 @@
       ],
       "metadata": {
         "id": "vD6Mm_S0NpCD"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#練習\n",
+        "\n",
+        "cities = { 'Taipei', 'Beijing', 'Tokyo'}\n",
+        "# 增加一般元素\n",
+        "cities.add('Chicago')\n",
+        "print('cities集合內容 ', cities)\n",
+        "# 增加已有元素並觀察執行結果\n",
+        "cities.add('Beijing')\n",
+        "print('cities集合內容 ', cities)\n",
+        "# 增加元組元素並觀察執行結果\n",
+        "tup = (1, 2, 3)\n",
+        "cities.add(tup)\n",
+        "print('cities集合內容 ', cities)"
+      ],
+      "metadata": {
+        "id": "mibWhxkzRTwM"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#練習\n",
+        "\n",
+        "# 賦值\n",
+        "numset = {1, 2, 3}\n",
+        "deep_numset = numset\n",
+        "deep_numset.add(10)\n",
+        "print(\"賦值   - 觀察numset    \t\", numset)\n",
+        "print(\"賦值   - 觀察deep_numset   \", deep_numset)\n",
+        "# 淺拷貝shallow copy\n",
+        "shallow_numset = numset.copy( )\n",
+        "shallow_numset.add(100)\n",
+        "print(\"淺拷貝 - 觀察numset    \t\", numset)\n",
+        "print(\"淺拷貝 - 觀察shallow_numset\", shallow_numset)"
+      ],
+      "metadata": {
+        "id": "veGrwK03Rcg2"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#練習 使用remove( )刪除集合元素成功\n",
+        "\n",
+        "countries = {'Japan', 'China', 'France'}\n",
+        "print(\"刪除前的countries集合 \", countries)\n",
+        "countries.remove('Japan')\n",
+        "print(\"刪除後的countries集合 \", countries)"
+      ],
+      "metadata": {
+        "id": "KdJnXz-JRdSq"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#練習 使用remove( )刪除集合元素失敗\n",
+        "\n",
+        "animals = {'dog', 'cat', 'bird'}\n",
+        "print(\"刪除前的animals集合 \", animals)\n",
+        "animals.remove('fish')    \t# 刪除不存在的元素產生錯誤\n",
+        "print(\"刪除後的animals集合 \", animals)"
+      ],
+      "metadata": {
+        "id": "TlQJepM9RpMO"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#練習 使用discard( )刪除集合元素\n",
+        "\n",
+        "animals = {'dog', 'cat', 'bird'}\n",
+        "print(\"刪除前的animals集合\t\", animals)\n",
+        "# 欲刪除元素有在集合內\n",
+        "animals.discard('cat')\n",
+        "print(\"刪除後的animals集合\t\", animals)\n",
+        "# 欲刪除元素沒有在集合內\n",
+        "animals.discard('pig')\n",
+        "print(\"刪除後的animals集合\t\", animals)\n",
+        "# 列印傳回值\n",
+        "print(\"刪除資料存在的傳回值   \", animals.discard('dog'))\n",
+        "print(\"刪除資料不存在的傳回值 \", animals.discard('pig'))"
+      ],
+      "metadata": {
+        "id": "EHKajEEwR2mQ"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#練習 使用pop( )刪除集合元素\n",
+        "\n",
+        "animals = {'dog', 'cat', 'bird'}\n",
+        "print(\"刪除前的animals集合 \", animals)\n",
+        "ret_element = animals.pop( )\n",
+        "print(\"刪除後的animals集合 \", animals)\n",
+        "print(\"所刪除的元素是  \t\", ret_element)"
+      ],
+      "metadata": {
+        "id": "BHPjPMImR-5G"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#練習\n",
+        "\n",
+        "states = {'Mississippi', 'Idoho', 'Florida'}\n",
+        "print(\"刪除前的states集合\t\", states)\n",
+        "states.clear( )\n",
+        "print(\"刪除前的states集合\t\", states)\n",
+        "\n",
+        "# 測試刪除空集合\n",
+        "empty_set = set( )\n",
+        "print(\"刪除前的empty_set集合 \", empty_set)\n",
+        "states.clear( )\n",
+        "print(\"刪除前的empty_set集合 \", empty_set)"
+      ],
+      "metadata": {
+        "id": "p-_UBC_sSHfP"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#練習 isdisjoint( )\n",
+        "\n",
+        "A = {'a', 'b', 'c'}\n",
+        "B = {'c', 'd', 'e'}\n",
+        "C = {'h', 'k', 'p'}\n",
+        "# 測試A和B集合\n",
+        "boolean = A.isdisjoint(B)   \t# 有共同的元素'c'\n",
+        "print(\"有共同的元素傳回值是   \", boolean)\n",
+        "# 測試A和C集合\n",
+        "boolean = A.isdisjoint(C)   \t# 沒有共同的元素\n",
+        "print(\"沒有共同的元素傳回值是 \", boolean)"
+      ],
+      "metadata": {
+        "id": "qpRgC4drSQe4"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#練習issubset( )\n",
+        "\n",
+        "A = {'a', 'b', 'c'}\n",
+        "B = {'a', 'b', 'c', 'd', 'e', 'f', 'g', 'k'}\n",
+        "C = {'k', 'm', 'n'}\n",
+        "# 測試A和B集合\n",
+        "boolean = A.issubset(B)     \t# 所有A的元素皆是B的元素\n",
+        "print(\"A集合是B集合的子集合傳回值是 \", boolean)\n",
+        "# 測試C和B集合\n",
+        "boolean = C.issubset(B)     \t# 有共同的元素k\n",
+        "print(\"C集合是B集合的子集合傳回值是 \", boolean)"
+      ],
+      "metadata": {
+        "id": "nbdDn1O4SbEp"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#練習intersection_update( )\n",
+        "\n",
+        "A = {'a', 'b', 'c', 'd'}\n",
+        "B = {'a', 'k', 'c'}\n",
+        "C = {'c', 'f', 'w'}\n",
+        "# A將是A和B的交集\n",
+        "ret_value = A.intersection_update(B)\n",
+        "print(ret_value)\n",
+        "print(\"A集合 = \", A)\n",
+        "print(\"B集合 = \", B)\n",
+        "# A將是A, B和C的交集\n",
+        "ret_value = A.intersection_update(B, C)\n",
+        "print(ret_value)\n",
+        "print(\"A集合 = \", A)\n",
+        "print(\"B集合 = \", B)\n",
+        "print(\"C集合 = \", C)"
+      ],
+      "metadata": {
+        "id": "pfXyNIrNSxz8"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#練習 update( )\n",
+        "\n",
+        "cars1 = {'Audi', 'Ford', 'Toyota'}\n",
+        "cars2 = {'Nissan', 'Toyota'}\n",
+        "print(\"執行update( )前列出cars1和cars2內容\")\n",
+        "print(\"cars1 = \", cars1)\n",
+        "print(\"cars2 = \", cars2)\n",
+        "cars1.update(cars2)\n",
+        "print(\"執行update( )後列出cars1和cars2內容\")\n",
+        "print(\"cars1 = \", cars1)\n",
+        "print(\"cars2 = \", cars2)"
+      ],
+      "metadata": {
+        "id": "ZVR-3hJ_S8mM"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#練習symmetric_difference_update( )\n",
+        "\n",
+        "cars1 = {'Audi', 'Ford', 'Toyota'}\n",
+        "cars2 = {'Nissan', 'Toyota'}\n",
+        "print(\"執行difference_update( )前列出cars1和cars2內容\")\n",
+        "print(\"cars1 = \", cars1)\n",
+        "print(\"cars2 = \", cars2)\n",
+        "cars1.difference_update(cars2)\n",
+        "print(\"執行difference_update( )後列出cars1和cars2內容\")\n",
+        "print(\"cars1 = \", cars1)\n",
+        "print(\"cars2 = \", cars2)"
+      ],
+      "metadata": {
+        "id": "A4LR-NKsTE-p"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#練習 凍結集合frozenset\n",
+        "\n",
+        "X = frozenset([1, 3, 5])\n",
+        "Y = frozenset([5, 7, 9])\n",
+        "print(X)\n",
+        "print(Y)\n",
+        "print(\"交集  = \", X & Y)\n",
+        "print(\"聯集  = \", X | Y)\n",
+        "A = X & Y\n",
+        "print(\"交集A = \", A)\n",
+        "A = X.intersection(Y)\n",
+        "print(\"交集A = \", A)"
+      ],
+      "metadata": {
+        "id": "kogMFDmxTapJ"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#練習 產生1,3, …, 99的集合\n",
+        "\n",
+        "A = {n for n in range(1,100,2)}\n",
+        "print(type(A))\n",
+        "print(A)"
+      ],
+      "metadata": {
+        "id": "enL71Sq3Tkjc"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#元組(tuple)"
+      ],
+      "metadata": {
+        "id": "0rBKqGBBT00y"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#練習\n",
+        "\n",
+        "numbers1 = (1, 2, 3, 4, 5)  \t# 定義元組元素是整數\n",
+        "fruits = ('apple', 'orange')\t# 定義元組元素是字串\n",
+        "mixed = ('James', 50)       \t# 定義元組元素是不同型態資料\n",
+        "val_tuple = (10,)           \t# 只有一個元素的元祖\n",
+        "print(numbers1)\n",
+        "print(fruits)\n",
+        "print(mixed)\n",
+        "print(val_tuple)\n",
+        "# 列出元組資料型態\n",
+        "print(\"元組mixed資料型態是: \",type(mixed))"
+      ],
+      "metadata": {
+        "id": "NQalBLUBT7pJ"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#練習 修改元組內容產生錯誤的實例\n",
+        "\n",
+        "fruits = ('apple', 'orange')    \t# 定義元組元素是字串\n",
+        "print(fruits[0])                \t# 列印元組fruits[0]\n",
+        "fruits[0] = 'watermelon'        \t# 將元素內容改為watermelon\n",
+        "print(fruits[0])                \t# 列印元組fruits[0]"
+      ],
+      "metadata": {
+        "id": "eboJKJDmT-7V"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#練習 全新定義方式修改元組元素\n",
+        "\n",
+        "fruits = ('apple', 'orange')    \t# 定義元組元素是水果\n",
+        "print(\"原始fruits元組元素\")\n",
+        "for fruit in fruits:\n",
+        "\tprint(fruit)\n",
+        "fruits = ('watermelon', 'grape')\t# 定義新的元組元素\n",
+        "print(\"\\n新的fruits元組元素\")\n",
+        "for fruit in fruits:\n",
+        "\tprint(fruit)"
+      ],
+      "metadata": {
+        "id": "E3D6PyVeUIFB"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#練習 元組切片的應用\n",
+        "\n",
+        "fruits = ('apple', 'orange', 'banana', 'watermelon', 'grape')\n",
+        "print(fruits[1:3])\n",
+        "print(fruits[:2])\n",
+        "print(fruits[1:])\n",
+        "print(fruits[-2:])\n",
+        "print(fruits[0:5:2])"
+      ],
+      "metadata": {
+        "id": "cqiP1ybJUKfP"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#練習 列出元組元素長度(個數)\n",
+        "\n",
+        "keys = ('magic', 'xaab', 9099)  \t# 定義元組元素是字串與數字\n",
+        "print(\"keys元組長度是 %d \" % len(keys))"
+      ],
+      "metadata": {
+        "id": "ueKX7uXNUaLx"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#練習 用會減少元組元素的方法pop( )，產生錯誤\n",
+        "\n",
+        "keys = ('magic', 'xaab', 9099)  \t# 定義元組元素是字串與數字\n",
+        "key = keys.pop( )       \t# 錯誤"
+      ],
+      "metadata": {
+        "id": "eIqDN0aPUc4f"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#練習 用會增加元組元素的方法append( )，產生錯誤\n",
+        "\n",
+        "keys = ('magic', 'xaab', 9099)  \t# 定義元組元素是字串與數字\n",
+        "keys.append('secret')       \t# 錯誤"
+      ],
+      "metadata": {
+        "id": "xZallTTzUf-H"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#練習 list(元組)：將元組資料型態改為串列\n",
+        "\n",
+        "keys = ('magic', 'xaab', 9099)  \t# 定義元組元素是字串與數字\n",
+        "list_keys = list(keys)          \t# 將元組改為串列\n",
+        "list_keys.append('secret')      \t# 增加元素\n",
+        "print(\"列印元組\", keys)\n",
+        "print(\"列印串列\", list_keys)"
+      ],
+      "metadata": {
+        "id": "Z6gLtiBNUnFP"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#練習 tuple(串列)：將串列資料型態改為元組\n",
+        "\n",
+        "keys = ['magic', 'xaab', 9099]  \t# 定義串列元素是字串與數字\n",
+        "tuple_keys = tuple(keys)        \t# 將串列改為元組\n",
+        "print(\"列印串列\", keys)\n",
+        "print(\"列印元組\", tuple_keys)\n",
+        "tuple_keys.append('secret')     \t# 增加元素 --- 錯誤錯誤"
+      ],
+      "metadata": {
+        "id": "OVeE9IejUoyN"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## 作業\n",
+        "定義一個元組有重複的元素 tp=(1,2,3,4,5,2,3,1,4)，\n",
+        "\n",
+        "請建立一個新的newtp，此新元組儲存相同但沒有重複的元素。\n",
+        "\n",
+        "提示：使用串列處理，最後轉成元組。"
+      ],
+      "metadata": {
+        "id": "BcyXu2KZU4fe"
       }
     }
   ]
