Update section headers in ch06.md
Signed-off-by: Yen-ting Lee <ytlee.tw@gmail.com>

--- a/ch06.md
+++ b/ch06.md
@@ -27,7 +27,7 @@ def insertChar(letter, myList=None):
 insertChar('x')
 insertChar('y')
 ```
-傳遞一個參數
+### 傳遞一個參數
 ```
 #練習
 
@@ -36,7 +36,7 @@ def greeting(name):
 	print("Hi,", name, "Good Morning!")
 greeting('Nelson')
 ```
-多個參數傳遞
+### 多個參數傳遞
 ```
 #練習
 
@@ -51,7 +51,7 @@ print("a - b = ", end="")   	# 輸出a-b字串,接下來輸出不跳行
 subtract(a, b)
 ```
 
-關鍵字參數：參數名稱=值
+### 關鍵字參數：參數名稱=值
 
 所謂的關鍵字參數(keyword arguments)是指呼叫函數時，參數是用參數名稱=值配對方式呈現。
 
@@ -66,7 +66,6 @@ def interest(interest_type, subject):
 interest(interest_type = '旅遊', subject = '敦煌')  # 位置正確
 interest(subject = '敦煌', interest_type = '旅遊')  # 位置更動
 ```
-
 參數預設值的處理，特別需留意：函數設計時含有預設值的參數，必須放置在參數列的最右邊
 ```
 #練習
@@ -84,7 +83,7 @@ interest(subject = '張家界', interest_type = '旅遊') # 傳遞二個參數
 interest('閱讀', '旅遊類')            	# 傳遞二個參數,不同的主題
 ```
 
-函數傳回值，Python在直譯時會自動回傳處理成”return None”
+### 函數傳回值，Python在直譯時會自動回傳處理成”return None”
 
 ```
 #練習 列出Python回傳greeting( )函數的資料是否是None，同時列出傳回值的資料型態。
