--- a/ch07.md
+++ b/ch07.md
@@ -6,4 +6,195 @@
 # 檔案系統
 
 檔案系統的使用
-os模組提供取得工作目錄、建立目錄、刪除目錄、刪除檔案、執行作業系統命令等功能
+os模組提供取得工作目錄、建立目錄、刪除目錄、刪除檔案、執行作業系統命令等功能。
+
+請先到下方連結下載相關檔案範例並上傳到虛擬機中。
+https://drive.google.com/drive/folders/1fIqFo3EevTUfQa1NEqUTydpjXW_RuLQg?usp=sharing
+
+## 範例練習
+取得工作目錄
+```
+#練習 取得工作目錄 osgetcwd.py
+import os
+print(os.getcwd())  
+```
+
+刪除指定檔案
+```
+#練習 刪除指定檔案 osremove.py
+import os
+file = "myFile.txt"
+if os.path.exists(file):
+	os.remove(file)
+else:
+	print(file + "檔案未建立!") 
+```
+
+建立指定目錄
+```
+#練習 建立指定目錄 osrmdir.py
+import os
+dir = "myDir"
+if not os.path.exists(dir):
+	os.mkdir(dir)
+else:
+	print(dir + "已經存在!")   
+
+```
+
+刪除指定檔案
+```
+#練習  刪除指定檔案 osrmdir.py
+import os
+dir = "myDir"
+if os.path.exists(dir):
+	os.rmdir(dir)
+else:
+	print(dir + "目錄未建立!")
+
+```
+
+system 函式指令
+```
+#練習  system 函式指令 ossystem.py
+import os
+cur_path=os.getcwd() # 取得目前路徑  
+os.system("cls")  # 清除螢幕
+os.system("mkdir dir2")  # 建立 dir2 目錄
+os.system("copy ossystem.py dir2\copyfile.py") # 複製檔案
+file=cur_path + "\dir2\copyfile.py"
+os.system("notepad " + file)  # 以記事本開啟 copyfile.py 檔
+
+```
+
+檢查檔案或路徑是否存在
+```
+#練習 os.path模組 檢查檔案或路徑是否存在 osexists.py
+import os
+filename=os.path.abspath("osexists.py")
+if os.path.exists(filename): #檢查檔案是否存在
+	print("完整路徑名稱：" + filename)
+	print("檔案大小：" , os.path.getsize(filename))
+
+```
+
+將參數內的字串結合成一個檔案路徑
+```
+#練習 join函式 將參數內的字串結合成一個檔案路徑 ospath.py
+import os
+filename=os.path.abspath("ospath.py")
+if os.path.exists(filename):   
+    basename=os.path.basename(filename)
+    print("最後的檔案或路徑名稱：" + basename)
+    
+    dirname=os.path.dirname(filename)
+    print("目前檔案目錄路徑：" + dirname) 
+    
+    print("是否為目錄：",os.path.isdir(filename))
+    fullpath,fname=os.path.split(filename)
+    print("目錄路徑：" + fullpath)
+    print("檔名：" + fname)
+    
+    Drive,fpath=os.path.splitdrive(filename)
+    print("磁碟機：" + Drive)
+    print("路徑名稱：" + fpath)   
+    
+    fullpath = os.path.join(fullpath + "\\" + fname)
+    print("組合路徑= " + fullpath)
+
+```
+
+shutil模組 (colab 無法執行)
+```
+#練習shutil模組 
+import os,shutil
+cur_path=os.path.dirname(__file__) # 取得目前路徑
+destfile= cur_path + "\\" + "newfile.py"
+shutil.copy("shutil.py",destfile )  # 檔案複製
+shutil.copyfile("shutil.py","D:\\new.py" )  # 檔案複製
+
+```
+
+glob模組 取得指定條件的檔案串列
+```
+#練習 glob模組 取得指定條件的檔案串列 glob.py
+import glob
+files = glob.glob("glob.py") + glob.glob("os*.py") + glob.glob("*.txt")
+for file in files:
+	print(file)
+
+```
+
+## 檔案的讀寫
+open函式八個參數，最常用的是檔案名稱、模式、編碼參數。
+檔案名稱不可省略，其他皆可。
+
+```
+#練習 filewrite1.py
+content='''Hello Python
+中文字測試
+Welcome
+'''
+f=open('file1.txt','w')
+f.write(content)
+f.close()
+```
+
+```
+#練習 fileread1.py
+f=open('file1.txt','r')
+for line in f:
+	print(line,end="")
+f.close()
+
+```
+
+```
+#練習 fileread2.py
+with open('file1.txt','r') as f:
+	for line in f:
+    	print(line,end="")
+
+```
+
+中文編碼問題：在中文windows系統，一般中文編碼記事本預設為ANSI，
+國際間編碼預設為UTF-8編碼，因此建議使用UTF-8進行存檔
+```
+#練習 filereadUTF-8.py
+f=open('file2.txt','r',encoding ='cp950')
+#f=open('file2.txt','r',encoding ='UTF-8')
+for line in f:
+	print(line,end="")
+f.close()
+
+```
+
+```
+#練習 fileread3.py 讀檔案的前5個字元
+with open('file1.txt','r') as f:
+	str1=f.read(5)
+	print(str1)  # Hello
+
+```
+
+```
+#練習 fileread4.py 讀一整列的文字
+with open('file2.txt','r',encoding ='UTF-8') as f:
+	print(f.readline())  # 123中文字\n
+	print(f.readline(3)) # abc
+
+```
+
+```
+#練習 fileread5.py 讀取後以串列方式傳回
+with open('file1.txt','r') as f:
+	content=f.readlines()
+	print(type(content))   # <class 'list'>
+	print(content) 
+
+```
+
+## 作業
+請到CNN找一篇英文文章存入名為input.txt的檔案，
+並寫一支程式計算小寫a-z各字母分別出現多少個。
+
